--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "license": "UNLICENSED",
     "scripts": {
         "build": "nest build",
-        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+        "format": "prettier --write \"src/**/*.ts\"",
         "start": "nest start",
         "start:dev": "cross-env NODE_ENV=development nest start --watch",
         "start:debug": "nest start --debug --watch",
@@ -23,8 +23,14 @@
         "@nestjs/common": "^10.0.0",
         "@nestjs/config": "^3.2.3",
         "@nestjs/core": "^10.0.0",
+        "@nestjs/jwt": "^10.2.0",
         "@nestjs/platform-express": "^10.0.0",
+        "@nestjs/sequelize": "^10.0.1",
         "@nestjs/swagger": "^7.4.0",
+        "bcryptjs": "^2.4.3",
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.14.1",
+        "pg": "^8.12.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.1"
     },
@@ -35,6 +41,7 @@
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.2",
         "@types/node": "^20.3.1",
+        "@types/sequelize": "^4.28.20",
         "@types/supertest": "^2.0.12",
         "@typescript-eslint/eslint-plugin": "^6.0.0",
         "@typescript-eslint/parser": "^6.0.0",
